# templatepp

./: .clang-format  .clang-tidy  .gitignore  .hdoc.toml  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build.cmd  clean.cmd  conanfile.py  conanfile.txt  gendoc.sh  name.txt  path.txt  test.cmd
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: issue_template.md
.github/workflows/: build-linux.yml  build-mac.yml  build-win.yml  build.yml  release.yml
cmake/: build_doc.cmake  build_options.cmake  build_paths.cmake  clang_devtools.cmake  code_coverage.cmake  coverage.cmake  export_config.cmake  generate_doc.cmake  generate_export_headers.cmake  install_paths.cmake  overrides-clang.cmake  overrides-gcc.cmake  overrides-msvc.cmake  pack.cmake  package.cmake  sanity_checks.cmake  static_analysis.cmake  toolchain-clang.cmake  toolchain-gcc.cmake  toolchain-msvc.cmake
cmake/config/: config.cmake.in  version.cmake.in
cmake/doc/: Doxyfile.in
cmake/toolchain/: overrides-clang.cmake  overrides-gcc.cmake  toolchain-clang.cmake  toolchain-gcc.cmake
cmake/toolchains/: overrides-clang.cmake  overrides-gcc.cmake  overrides-msvc.cmake  toolchain-clang.cmake  toolchain-gcc.cmake  toolchain-msvc.cmake
doc/: .hdoc.toml  CMakeLists.txt  Doxyfile.in
include/project-init-cpp/: application.hpp
include/templatepp/: application.hpp  sdl_utils.hpp
include/templatepp/details/: configure.hpp
integration/: CMakeLists.txt  conanfile.py  integration.cpp
project-init-cpp/: CMakeLists.txt  application.cpp
project-init-cpp/details/: configure.hpp
src/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  application.cpp  cmake_install.cmake  config.hpp.in  project-init-cpp.vcxproj  project-init-cpp.vcxproj.filters  version.hpp.in
src/project-init-cpp.dir/Release/: project-init-cpp.dll.recipe
src/project-init-cpp.dir/Release/project-init-cpp.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  project-init-cpp.lastbuildstate  project-init-cpp.write.1u.tlog
templatepp/: CMakeLists.txt  application.cpp  application.hpp  application.test.cpp
templatepp/details/: config.hpp  version.hpp.in
test/: CMakeLists.txt  application.test.cpp  application_test.cpp  conanfile.py  integration_test.cpp
test_package/: CMakeLists.txt  conanfile.py  integration_test.cpp
tests/: CMakeLists.txt  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  application_test.cpp  cmake_install.cmake  main.cpp  project-init-cpp-tests.vcxproj  project-init-cpp-tests.vcxproj.filters  project-init-cpp-tests[1]_include.cmake  project-init-cpp-tests[1]_tests.cmake
tests/project-init-cpp-tests.dir/Release/: project-init-cpp-tests.exe.recipe
tests/project-init-cpp-tests.dir/Release/project-.BA95AC81.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  project-init-cpp-tests.lastbuildstate
